--- a/typewriters.html
+++ b/typewriters.html
@@ -54,6 +54,9 @@
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1918_Corona3Open.jpg" alt="1918 Corona 3" style="height:150px;"></p>
 						</li>
 						<li>
+							<strong>192X Elliot Fisher Accounting Typewriter</strong><a href="http://www.dersche.id/typewriters/ElliotFisher.html"><font size="1">more...</font></a>
+						</li>
+						<li>
 							<strong>1925 Remington Portable </strong><a href="http://www.dersche.id/typewriters/1925RemingtonPortable.html"><font size="1">more...</font></a>
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1925_RemingtonPortableOpen.jpg" alt="1925 Remington Portable" style="height:150px;"></p>
 						</li>
@@ -86,8 +89,17 @@
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1939_CoronaSterling.jpg" alt="1939 Corona Sterling" style="height:150px;"></p>
 						</li>
 						<li>
+							<strong>1946 Smith Corona Silent</strong><a href="http://www.dersche.id/typewriters/1946SmithCoronaSilent.html"><font size="1">more...</font></a>
+						</li>
+						<li>
+							<strong>1946 Royal Quiet De Luxe</strong><a href="http://www.dersche.id/typewriters/1946RoyalQuietDeLuxe.html"><font size="1">more...</font></a>
+						</li>
+						<li>
 							<strong>1947 Remington Rand Noiseless 7 </strong><a href="http://www.dersche.id/typewriters/1947RemingtonRandNoiseless7.html"><font size="1">more...</font></a>
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1947_RemingtonRandNoiseless7.jpg" alt="1947 Remington Rand Noiseless 7" style="height:150px;"></p>
+						</li>
+						<li>
+							<strong>1949 Smith Corona Sterling</strong><a href="http://www.dersche.id/typewriters/1939SmithCoronaSterling.html"><font size="1">more...</font></a>
 						</li>
 						<li>
 							<strong>1949 Remington All New </strong><a href="http://www.dersche.id/typewriters/1949RemingtonAllNew.html"><font size="1">more...</font></a>
@@ -96,6 +108,9 @@
 						<li>
 							<strong>1952 Smith Corona Silent </strong><a href="http://www.dersche.id/typewriters/1952SmithCoronaSilent.html"><font size="1">more...</font></a>
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1952_SmithCoronaSilent.jpg" alt="1952 Smith Corona Silent" style="height:150px;"></p>
+						</li>
+						<li>
+							<strong>1954 Halberg Traveler</strong><a href="http://www.dersche.id/typewriters/1954HalbergTraveler.html"><font size="1">more...</font></a>
 						</li>
 						<li>
 							<strong>1954 Remington Quiet-Riter </strong><a href="http://www.dersche.id/typewriters/1954RemingtonQuietRiter.html"><font size="1">more...</font></a>
@@ -110,29 +125,14 @@
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1957_UnderwoodStar.jpg" alt="1957 Underwood Star" style="height:150px;"></p>
 						</li>
 						<li>
+							<strong>1962 Royal Futura 800</strong><a href="http://www.dersche.id/typewriters/1962RoyalFutura800.html"><font size="1">more...</font></a>
+						</li>
+						<li>
 							<strong>1965 SCM Sterling </strong><a href="http://www.dersche.id/typewriters/1965SCMSterling.html"><font size="1">more...</font></a>
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1965_SCMSterling.jpg" alt="1965 SCM Sterling" style="height:150px;"></p>
 						</li>
 						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
-						</li>
-						<li>
-							<strong></strong>
+							<strong>1969 Olivetti-Underwood Studio 45</strong><a href="http://www.dersche.id/typewriters/1969OlivettiUnderwoodStudio45.html"><font size="1">more...</font></a>
 						</li>
 						<li>
 							<strong></strong>
