--- a/typewriters.html
+++ b/typewriters.html
@@ -29,19 +29,28 @@
         </div>
     </section>
     <!--HOME SECTION END-->
-    <section>
+    <section id="intro">
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-                    <p>Mac has been collecting typewriters since June of 2012. His collection currently includes somewhere around 40 to 50 different machines (he has lost count).
+                    <p>
+						Mac has been collecting typewriters since June of 2012. His collection currently includes somewhere around 40 to 50 different machines (he has lost count).
                         A list of his collection with pictures and descriptions can be found below.
                     </p>
                     <div class="alert alert-info" >
-                        This list is not complete, and may not always be kept up to date. 
+                        This list is not necessarily complete, and may not always be kept up to date. 
 						You can visit my gallery on the Typewriter Database by clicking <a href="http://typewriterdatabase.com/typewriters.php?hunter_search=943">here</a>. 
-						The Typewriter Database will likely always have a more up to date listing of my collection than this site.
+						The Typewriter Database will likely always have a more up to date listing of my collection than this site, as that is where they are first uploaded.
                     </div>
                     <hr>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="typewriter-list">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12" style="min-height:800px;">
 					<div class="alert alert-info" >
 						This list is probably in chronological order of the date of manufacture, but no guarantees are made.
 					</div>
