Test new header

--- a/typewriters.html
+++ b/typewriters.html
@@ -18,7 +18,7 @@
     <link href="assets/css/style.css" rel="stylesheet" />
 </head>
 <body > 
-	<div w3-include-html="http://www.dersche.id/includes/header.html"></div>
+	<div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
 	<script>
 		w3IncludeHTML();
 	</script>
@@ -32,7 +32,7 @@
     <section id="intro">
         <div class="container">
             <div class="row">
-                <div class="col-md-12" style="min-height:800px;">
+                <div class="col-md-12">
                     <p>
 						Mac has been collecting typewriters since June of 2012. His collection currently includes somewhere around 40 to 50 different machines (he has lost count).
                         A list of his collection with pictures and descriptions can be found below.
