--- a/typewriterLanding.html
+++ b/typewriterLanding.html
@@ -9,7 +9,7 @@
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
-    <title>DERSCHE.id - Family Website</title>
+    <title>Derscheid Typewriter Page - DERSCHE.id</title>
     <!-- BOOTSTRAP CORE STYLE CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
      <!-- FONTAWESOME STYLE CSS -->
@@ -18,17 +18,10 @@
     <link href="assets/css/style.css" rel="stylesheet" />
 </head>
 <body > 
-	<div w3-include-html="http://www.dersche.id/includes/header.html"></div>
+	<div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
 	<script>
 		w3IncludeHTML();
 	</script>
-    <section class="headline-sec">
-        <div class="overlay ">
-            <h3 >TYPEWRITERS <i class="fa fa-angle-double-right "></i></h3>
-
-        </div>
-    </section>
-    <!--HOME SECTION END-->
     <section id="intro">
         <div class="container">
             <div class="row">
