--- a/typewriterLanding.html
+++ b/typewriterLanding.html
@@ -28,17 +28,17 @@
                 <div class="col-md-12">
 					<br>
 					<br>
-					<br>
-					<br>
+					<hr>
                     <p>
 						Mac has been collecting typewriters since June of 2012. His collection currently includes somewhere around 40 to 50 different machines (he has lost count).
                         A list of his collection with pictures and descriptions can be found below.
                     </p>
-                    <div class="alert alert-info" >
-                        This list is not necessarily complete, and may not always be kept up to date. 
+                    <p>
+                        The list of my collection found on this site is not necessarily complete, and may not always be kept up to date. 
 						You can visit my gallery on the Typewriter Database by clicking <a href="http://typewriterdatabase.com/typewriters.php?hunter_search=943">here</a>. 
 						The Typewriter Database will likely always have a more up to date listing of my collection than this site, as that is where they are first uploaded.
-                    </div>
+						However, I will do my best to keep this page updated as well.
+                    </p>
                     <hr>
 				</div>
 			</div>
