--- a/typewriterLanding.html
+++ b/typewriterLanding.html
@@ -40,6 +40,17 @@
 						However, I will do my best to keep this page updated as well.
                     </p>
                     <hr>
+					<center>
+						<div id="twdb1"> 
+							<object type="text/html" 
+								data="http://typewriterdatabase.com/typewriter_list_ajax.php?output=htm&css=1
+								&hunter_search=943 <!-- Your Member ID @TWDB -->
+								&collection_search=My+Collection" 
+								style="overflow:auto;border:1px solid black;width:300px;height:500px;background-color:#fff;">
+							</object>
+						</div>
+					</center>
+					<hr>
 				</div>
 			</div>
 		</div>
