--- a/typewriterWishList.html
+++ b/typewriterWishList.html
@@ -25,7 +25,7 @@
 	<section id="typewriter-list">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12" style="min-height:800px;">
+				<div class="col-md-12">
 					<br>
 					<br>
 					<hr>
