--- a/typewriterCollection.html
+++ b/typewriterCollection.html
@@ -122,7 +122,7 @@
 							<strong>1969 Olivetti-Underwood Studio 45 </strong><a href="http://www.dersche.id/typewriters/1969OlivettiUnderwoodStudio45.html"><font size="1">more...</font></a>
 						</li>
 						<li>
-							<strong></strong>
+							<strong>1970's or 80's AN-UGC74A(V)3 Military Teletypewriter</strong><a href="http://www.dersche.id/typewriters/teletype.html"><font size="1">more...</font></a>
 						</li>
 						<li>
 							<strong></strong>
