Add Images, Complete 1946 RQDL Img Upload

--- a/typewriterCollection.html
+++ b/typewriterCollection.html
@@ -77,6 +77,7 @@
 						</li>
 						<li>
 							<strong>1946 Smith Corona Silent </strong><a href="http://www.dersche.id/typewriters/1946SmithCoronaSilent.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/rtilt.jpg" alt="1939 Corona Sterling" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1946 Royal Quiet De Luxe </strong><a href="http://www.dersche.id/typewriters/1946RoyalQuietDeLuxe.html"><font size="1">more...</font></a>
