--- a/typewriters/1946RoyalQuietDeLuxe.html
+++ b/typewriters/1946RoyalQuietDeLuxe.html
@@ -24,25 +24,21 @@
 	</script>
     <section class="headline-sec">
         <div class="overlay ">
-            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 197X AN-UGC74A(V)3 Military Teletypewriter</h3>
+            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1946 Royal Quiet De Luxe</h3>
+			<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/front.jpg" alt="1946 Royal Quiet De Luxe Front" style="width:500px;"></p>
+			<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/rtilt.jpg" alt="1946 Royal Quiet De Luxe Right Angle" style="width:500px;"></p>
+			<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/ltilt.jpg" alt="1946 Royal Quiet De Luxe Left Angle" style="width:500px;"></p>
+			<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/right.jpg" alt="1946 Royal Quiet De Luxe Right" style="width:500px;"></p>
+			<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/left.jpg" alt="1946 Royal Quiet De Luxe Left" style="width:500px;"></p>
+			<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/back.jpg" alt="1946 Royal Quiet De Luxe Back" style="width:500px;"></p>
         </div>
     </section>
     <!--HOME SECTION END-->
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-md-12" style="min-height:200px;">
-					<p>
-						This AN-UGC74A(V)3 was purchased on eBay, and shipped to me without a box. It came in it's original steel flight case, to which a shipping label was attached.
-						It weighs over 100 pounds, and has two handles on the top for convenient carrying by two people.
-					</p>
-					<p>
-						It took me over a year, but I finally tracked down a power cable for the machine, which allowed me to turn it on and get it working. The SM-D-764481 power cable
-						seems to be fairly hard to find. Before I found the cable for sale, I managed to get a hold of some pdf documents detailing the entire machine, including
-						the wiring diagram for the cable. I found a place where I could by the correct type of plug, however they sell for over $70. A few months ago, I contacted
-						the owner of a radio supply store that often carries military radio supplies, as they had sold one of these cables in the past. As it turned out, he had just
-						acquired one, and I bought it on the spot for $20. What a deal!
-					</p>
+                <div class="col-md-12" style="min-height:800px;">
+					
                 </div>
             </div>
         </div>
