--- a/typewriters/1946RoyalQuietDeLuxe.html
+++ b/typewriters/1946RoyalQuietDeLuxe.html
@@ -25,12 +25,6 @@
     <section class="headline-sec">
         <div class="overlay ">
             <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1946 Royal Quiet De Luxe</h3>
-			<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/front.jpg" alt="1946 Royal Quiet De Luxe Front" style="width:500px;"></p>
-			<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/rtilt.jpg" alt="1946 Royal Quiet De Luxe Right Angle" style="width:500px;"></p>
-			<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/ltilt.jpg" alt="1946 Royal Quiet De Luxe Left Angle" style="width:500px;"></p>
-			<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/right.jpg" alt="1946 Royal Quiet De Luxe Right" style="width:500px;"></p>
-			<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/left.jpg" alt="1946 Royal Quiet De Luxe Left" style="width:500px;"></p>
-			<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/back.jpg" alt="1946 Royal Quiet De Luxe Back" style="width:500px;"></p>
         </div>
     </section>
     <!--HOME SECTION END-->
@@ -38,7 +32,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-					
+					<p>A beautiful machine. This machine has many aesthetic qualities that, I believe, lend it well to the title of the world's most beautiful typewriter.
+					It has a touch of chrome which is not overpowering, but enough to give it a nice shine. The paint is matte, which makes it less distracting and gives nice
+					contrast to the chrome. It is a simple machine, being relatively intuitive to use.
+					<p>Regardless, it is not my favorite machine. That title belongs to the 1936 Corona Standard, Silent, or Sterling. In my opinion any of those may hold the title
+					of the world's most beautiful typewriter.
+					<p>Anyway, this machine was given to me by a family friend. She happens to refurbish old furniture for resale and occasionally acquires antiques such as this.
+					<center>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/front.jpg" alt="1946 Royal Quiet De Luxe Front" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/rtilt.jpg" alt="1946 Royal Quiet De Luxe Right Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/ltilt.jpg" alt="1946 Royal Quiet De Luxe Left Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/right.jpg" alt="1946 Royal Quiet De Luxe Right" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/left.jpg" alt="1946 Royal Quiet De Luxe Left" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/back.jpg" alt="1946 Royal Quiet De Luxe Back" style="width:500px;"></p>
+					</center>
                 </div>
             </div>
         </div>
