--- a/typewriters/1946RoyalQuietDeLuxe.html
+++ b/typewriters/1946RoyalQuietDeLuxe.html
@@ -32,6 +32,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
+					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/front.jpg" alt="1946 Royal Quiet De Luxe Front" style="width:500px;"></center></p>
+					<hr>
 					<p>A beautiful machine. This machine has many aesthetic qualities that, I believe, lend it well to the title of the world's most beautiful typewriter.
 					It has a touch of chrome which is not overpowering, but enough to give it a nice shine. The paint is matte, which makes it less distracting and gives nice
 					contrast to the chrome. It is a simple machine, being relatively intuitive to use.
@@ -39,7 +41,7 @@
 					of the world's most beautiful typewriter.
 					<p>Anyway, this machine was given to me by a family friend. She happens to refurbish old furniture for resale and occasionally acquires antiques such as this.
 					<center>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/front.jpg" alt="1946 Royal Quiet De Luxe Front" style="width:500px;"></p>
+					
 					<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/rtilt.jpg" alt="1946 Royal Quiet De Luxe Right Angle" style="width:500px;"></p>
 					<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/ltilt.jpg" alt="1946 Royal Quiet De Luxe Left Angle" style="width:500px;"></p>
 					<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/right.jpg" alt="1946 Royal Quiet De Luxe Right" style="width:500px;"></p>
