--- a/typewriterCollection.html
+++ b/typewriterCollection.html
@@ -44,6 +44,10 @@
 							<strong>192X Elliot Fisher Accounting Typewriter </strong><a href="http://www.dersche.id/typewriters/ElliotFisher.html"><font size="1">more...</font></a>
 						</li>
 						<li>
+							<strong>1925 Corona Four </strong><a href="http://www.dersche.id/typewriters/1925CoronaFour.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1925CoronaFour/ltilt.jpg" alt="1925 Corona Four" style="height:150px;"></p>
+						</li>
+						<li>
 							<strong>1925 Remington Portable </strong><a href="http://www.dersche.id/typewriters/1925RemingtonPortable.html"><font size="1">more...</font></a>
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1925_RemingtonPortableOpen.jpg" alt="1925 Remington Portable" style="height:150px;"></p>
 						</li>
@@ -77,10 +81,10 @@
 						</li>
 						<li>
 							<strong>1946 Smith Corona Silent </strong><a href="http://www.dersche.id/typewriters/1946SmithCoronaSilent.html"><font size="1">more...</font></a>
-							<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/rtilt.jpg" alt="1939 Corona Sterling" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1946 Royal Quiet De Luxe </strong><a href="http://www.dersche.id/typewriters/1946RoyalQuietDeLuxe.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/ltilt.jpg" alt="1939 Corona Sterling" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1947 Remington Rand Noiseless 7 </strong><a href="http://www.dersche.id/typewriters/1947RemingtonRandNoiseless7.html"><font size="1">more...</font></a>
