revise corona four

--- a/typewriterCollection.html
+++ b/typewriterCollection.html
@@ -52,6 +52,10 @@
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1925_RemingtonPortableOpen.jpg" alt="1925 Remington Portable" style="height:150px;"></p>
 						</li>
 						<li>
+							<strong>1926 Corona Four </strong><a href="http://www.dersche.id/typewriters/1926CoronaFour.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/ltilt.jpg" alt="1926 Corona Four" style="height:150px;"></p>
+						</li>
+						<li>
 							<strong>1926 Remington Portable </strong><a href="http://www.dersche.id/typewriters/1926RemingtonPortable.html"><font size="1">more...</font></a>
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1926_RemingtonPortableOpen.jpg" alt="1926 Remington Portable" style="height:150px;"></p>
 						</li>
