add 1926 Corona Four

--- a/typewriters/1926CoronaFour.html
+++ b/typewriters/1926CoronaFour.html
@@ -24,7 +24,7 @@
 	</script>
     <section class="headline-sec">
         <div class="overlay ">
-            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1946 Royal Quiet De Luxe</h3>
+            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1926 Corona Four</h3>
         </div>
     </section>
     <!--HOME SECTION END-->
@@ -32,21 +32,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/front.jpg" alt="1946 Royal Quiet De Luxe Front" style="width:500px;"></center></p>
+					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/front.jpg" alt="1926 Corona Four Front" style="width:500px;"></center></p>
 					<hr>
-					<p>A beautiful machine. This machine has many aesthetic qualities that, I believe, lend it well to the title of the world's most beautiful typewriter.
-					It has a touch of chrome which is not overpowering, but enough to give it a nice shine. The paint is matte, which makes it less distracting and gives nice
-					contrast to the chrome. It is a simple machine, being relatively intuitive to use.
-					<p>Regardless, it is not my favorite machine. That title belongs to the 1936 Corona Standard, Silent, or Sterling. In my opinion any of those may hold the title
-					of the world's most beautiful typewriter.
-					<p>Anyway, this machine was given to me by a family friend. She happens to refurbish old furniture for resale and occasionally acquires antiques such as this.
+					<p>Text will go here.
+					<p>More text will go here.
 					<center>
-					
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/rtilt.jpg" alt="1946 Royal Quiet De Luxe Right Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/ltilt.jpg" alt="1946 Royal Quiet De Luxe Left Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/right.jpg" alt="1946 Royal Quiet De Luxe Right" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/left.jpg" alt="1946 Royal Quiet De Luxe Left" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/back.jpg" alt="1946 Royal Quiet De Luxe Back" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/rtilt.jpg" alt="1926 Corona Four Right Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/ltilt.jpg" alt="1926 Corona Four Left Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/right.jpg" alt="1926 Corona Four Right" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/left.jpg" alt="1926 Corona Four Left" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/back.jpg" alt="1926 Corona Four Back" style="width:500px;"></p>
 					</center>
                 </div>
             </div>
