add halberg and 36 corona standard

--- a/typewriterCollection.html
+++ b/typewriterCollection.html
@@ -68,8 +68,8 @@
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1927_RoyalP.jpg" alt="1927 Royal P" style="height:150px;"></p>
 						</li>
 						<li>
-							<strong>1936 Corona Standard </strong><a href="http://www.dersche.id/typewriters/1936CoronaStandard1.html"><font size="1">more...</font></a>
-							<p><img src="http://www.dersche.id/assets/img/typewriters/1936_CoronaStandard.jpg" alt="1936 Corona Standard" style="height:150px;"></p>
+							<strong>1936 Corona Standard </strong><a href="http://www.dersche.id/typewriters/1936CoronaStandard.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard/ltilt.jpg" alt="1936 Corona Standard" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1936 Corona Standard </strong><a href="http://www.dersche.id/typewriters/1936CoronaStandard2.html"><font size="1">more...</font></a>
@@ -107,6 +107,7 @@
 						</li>
 						<li>
 							<strong>1954 Halberg Traveler </strong><a href="http://www.dersche.id/typewriters/1954HalbergTraveler.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1954HalbergTraveler/ltilt.jpg" alt="1954 Halberg Traveler" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1954 Remington Quiet-Riter </strong><a href="http://www.dersche.id/typewriters/1954RemingtonQuietRiter.html"><font size="1">more...</font></a>
