--- a/typewriters/1954HalbergTraveler.html
+++ b/typewriters/1954HalbergTraveler.html
@@ -24,7 +24,7 @@
 	</script>
     <section class="headline-sec">
         <div class="overlay ">
-            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1936 Corona Standard</h3>
+            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1954 Halberg Traveler</h3>
         </div>
     </section>
     <!--HOME SECTION END-->
@@ -32,16 +32,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard/front.jpg" alt="1936 Corona Standard Front" style="width:500px;"></center></p>
+					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1954HalbergTraveler/front.jpg" alt="1954 Halberg Traveler Front" style="width:500px;"></center></p>
 					<hr>
 					<p>Text will go here.
 					<p>More text will go here.
 					<center>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard/rtilt.jpg" alt="1936 Corona Standard Right Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard/ltilt.jpg" alt="1936 Corona Standard Left Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard/right.jpg" alt="1936 Corona Standard Right" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard/left.jpg" alt="1936 Corona Standard Left" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard/back.jpg" alt="1936 Corona Standard Back" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1954HalbergTraveler/rtilt.jpg" alt="1954 Halberg Traveler Right Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1954HalbergTraveler/ltilt.jpg" alt="1954 Halberg Traveler Left Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1954HalbergTraveler/right.jpg" alt="1954 Halberg Traveler Right" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1954HalbergTraveler/left.jpg" alt="1954 Halberg Traveler Left" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1954HalbergTraveler/back.jpg" alt="1954 Halberg Traveler Back" style="width:500px;"></p>
 					</center>
                 </div>
             </div>
