add ears to halberg

--- a/typewriters/1954HalbergTraveler.html
+++ b/typewriters/1954HalbergTraveler.html
@@ -42,6 +42,7 @@
 					<p><img src="http://www.dersche.id/assets/img/typewriters/1954HalbergTraveler/right.jpg" alt="1954 Halberg Traveler Right" style="width:500px;"></p>
 					<p><img src="http://www.dersche.id/assets/img/typewriters/1954HalbergTraveler/left.jpg" alt="1954 Halberg Traveler Left" style="width:500px;"></p>
 					<p><img src="http://www.dersche.id/assets/img/typewriters/1954HalbergTraveler/back.jpg" alt="1954 Halberg Traveler Back" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1954HalbergTraveler/ears.jpg" alt="1954 Halberg Traveler Ears" style="width:500px;"></p>
 					</center>
                 </div>
             </div>
