Add Bing 2 and Corona 3

--- a/typewriters/1918Corona3.html
+++ b/typewriters/1918Corona3.html
@@ -25,7 +25,6 @@
     <section class="headline-sec">
         <div class="overlay ">
             <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1918 Corona 3</h3>
-
         </div>
     </section>
     <!--HOME SECTION END-->
@@ -33,13 +32,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-					<p>My oldest portable typewriter. Currently don't know what else to write.</p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1918_Corona3Open.jpg" alt="1918 Corona 3" style="width:500px;"></p>
+					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/front.jpg" alt="1918 Corona 3 Front" style="width:500px;"></center></p>
+					<hr>
+					<p>Text will go here.
+					<p>More text will go here.
+					<center>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/rtilt.jpg" alt="1918 Corona 3 Right Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/ltilt.jpg" alt="1918 Corona 3 Left Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/right.jpg" alt="1918 Corona 3 Right" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/left.jpg" alt="1918 Corona 3 Left" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/back.jpg" alt="1918 Corona 3 Back" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/closed.jpg" alt="1918 Corona 3 Closed" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/dealer.jpg" alt="1918 Corona 3 Dealer Decal" style="width:500px;"></p>
+					</center>
                 </div>
             </div>
         </div>
     </section>
-<div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
+	<div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
 	<script>
 		w3IncludeHTML();
 	</script>
