--- a/typewriters/1927Bing2.html
+++ b/typewriters/1927Bing2.html
@@ -24,8 +24,7 @@
 	</script>
     <section class="headline-sec">
         <div class="overlay ">
-            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1927 Bing 2</h3>
-
+            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1918 Corona 3</h3>
         </div>
     </section>
     <!--HOME SECTION END-->
@@ -33,12 +32,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-					
+					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/front.jpg" alt="1927 Bing 2 Front" style="width:500px;"></center></p>
+					<hr>
+					<p>Text will go here.
+					<p>More text will go here.
+					<center>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/rtilt.jpg" alt="1927 Bing 2 Right Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/ltilt.jpg" alt="1927 Bing 2 Left Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/right.jpg" alt="1927 Bing 2 Right" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/left.jpg" alt="1927 Bing 2 Left" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/back.jpg" alt="1927 Bing 2 Back" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/case.jpg" alt="1927 Bing 2 Case" style="width:500px;"></p>
+					</center>
                 </div>
             </div>
         </div>
     </section>
-<div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
+	<div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
 	<script>
 		w3IncludeHTML();
 	</script>
