--- a/typewriters/1918Corona3.html
+++ b/typewriters/1918Corona3.html
@@ -32,6 +32,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
+					<p>
+						<strong>Year:</strong> 1918
+						<strong>Make:</strong> Corona
+						<strong>Model:</strong> 3
+						<strong>S/N:</strong> 150301
 					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/front.jpg" alt="1918 Corona 3 Front" style="width:500px;"></center></p>
 					<hr>
 					<p>Text will go here.
