--- a/typewriters/1926CoronaFour.html
+++ b/typewriters/1926CoronaFour.html
@@ -32,10 +32,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
+					<p>
+						<strong>Year:</strong> 1926
+						<strong>Make:</strong> Corona
+						<strong>Model:</strong> Four
+						<strong>S/N:</strong> 1K06940
 					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/front.jpg" alt="1926 Corona Four Front" style="width:500px;"></center></p>
 					<hr>
-					<p>Text will go here.
-					<p>More text will go here.
+					<p>This machine is in near mint condition. It is absolutely beautiful. As far as Coronas go, this is one of my favourites, second only to the 1936 Corona Standard, 
+					Silent, or Sterling. It seems to have the original ribbon covers, which is more than I can say for my 1925 Corona Four. The decals are stunning, and the paint is 
+					nearly flawless.
+					<p>This was given to me by my dad's cousin for my high school graduation.
 					<center>
 					<p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/rtilt.jpg" alt="1926 Corona Four Right Angle" style="width:500px;"></p>
 					<p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/ltilt.jpg" alt="1926 Corona Four Left Angle" style="width:500px;"></p>
