--- a/typewriters/1927Bing2.html
+++ b/typewriters/1927Bing2.html
@@ -32,6 +32,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
+					<p>
+						<strong>Year:</strong> 1927
+						<strong>Make:</strong> Bing
+						<strong>Model:</strong> 2
+						<strong>S/N:</strong> Unknown
 					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1927Bing2/front.jpg" alt="1927 Bing 2 Front" style="width:500px;"></center></p>
 					<hr>
 					<p>Text will go here.
