--- a/typewriters/1926CoronaFour.html
+++ b/typewriters/1926CoronaFour.html
@@ -32,11 +32,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-					<p>
-						<strong>Year:</strong> 1926
-						<strong>Make:</strong> Corona
-						<strong>Model:</strong> Four
-						<strong>S/N:</strong> 1K06940
+					<p><strong>Year:</strong> 1926
+					<p><strong>Make:</strong> Corona
+					<p><strong>Model:</strong> Four
+					<p><strong>S/N:</strong> 1K06940
 					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/front.jpg" alt="1926 Corona Four Front" style="width:500px;"></center></p>
 					<hr>
 					<p>This machine is in near mint condition. It is absolutely beautiful. As far as Coronas go, this is one of my favourites, second only to the 1936 Corona Standard, 
