update template, and pages, and remove excess images

--- a/typewriters/1936CoronaStandard.html
+++ b/typewriters/1936CoronaStandard.html
@@ -34,6 +34,10 @@
                 <div class="col-md-12" style="min-height:800px;">
 					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard/front.jpg" alt="1936 Corona Standard Front" style="width:500px;"></center></p>
 					<hr>
+					<p><strong>Year:</strong> 1936
+					<p><strong>Make:</strong> Corona
+					<p><strong>Model:</strong> Standard
+					<p><strong>S/N:</strong> 1C70018
 					<p>Text will go here.
 					<p>More text will go here.
 					<center>
