--- a/typewriters/1946RoyalQuietDeLuxe.html
+++ b/typewriters/1946RoyalQuietDeLuxe.html
@@ -34,6 +34,10 @@
                 <div class="col-md-12" style="min-height:800px;">
 					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/front.jpg" alt="1946 Royal Quiet De Luxe Front" style="width:500px;"></center></p>
 					<hr>
+					<p><strong>Year:</strong> 1946
+					<p><strong>Make:</strong> Royal
+					<p><strong>Model:</strong> Quiet De Luxe
+					<p><strong>S/N:</strong> -1248161
 					<p>A beautiful machine. This machine has many aesthetic qualities that, I believe, lend it well to the title of the world's most beautiful typewriter.
 					It has a touch of chrome which is not overpowering, but enough to give it a nice shine. The paint is matte, which makes it less distracting and gives nice
 					contrast to the chrome. It is a simple machine, being relatively intuitive to use.
