--- a/typewriters/1954HalbergTraveler.html
+++ b/typewriters/1954HalbergTraveler.html
@@ -34,6 +34,10 @@
                 <div class="col-md-12" style="min-height:800px;">
 					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1954HalbergTraveler/front.jpg" alt="1954 Halberg Traveler Front" style="width:500px;"></center></p>
 					<hr>
+					<p><strong>Year:</strong> 1954
+					<p><strong>Make:</strong> Halberg
+					<p><strong>Model:</strong> Traveler
+					<p><strong>S/N:</strong> 42341
 					<p>Text will go here.
 					<p>More text will go here.
 					<center>
