--- a/typewriters/template.html
+++ b/typewriters/template.html
@@ -24,8 +24,7 @@
 	</script>
     <section class="headline-sec">
         <div class="overlay ">
-            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1954 Remington Quiet-Riter</h3>
-
+            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 19XX Make Model</h3>
         </div>
     </section>
     <!--HOME SECTION END-->
@@ -33,12 +32,26 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-					
+					<p><center><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/front.jpg" alt="1918 Corona 3 Front" style="width:500px;"></center></p>
+					<hr>
+					<p><strong>Year:</strong> 19XX
+					<p><strong>Make:</strong> Make
+					<p><strong>Model:</strong> Model
+					<p><strong>S/N:</strong> AB-123456
+					<p>Text will go here.
+					<p>More text will go here.
+					<center>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/rtilt.jpg" alt="19XX Make Model Right Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/ltilt.jpg" alt="19XX Make Model Left Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/right.jpg" alt="19XX Make Model Right" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/left.jpg" alt="19XX Make Model Left" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/back.jpg" alt="19XX Make Model Back" style="width:500px;"></p>
+					</center>
                 </div>
             </div>
         </div>
     </section>
-<div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
+	<div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
 	<script>
 		w3IncludeHTML();
 	</script>
