--- a/typewriters/1925CoronaFour.html
+++ b/typewriters/1925CoronaFour.html
@@ -34,6 +34,10 @@
                 <div class="col-md-12" style="min-height:800px;">
 					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1925CoronaFour/front.jpg" alt="1925 Corona Four Front" style="width:500px;"></center></p>
 					<hr>
+					<p><strong>Year:</strong> 1925
+					<p><strong>Make:</strong> Corona
+					<p><strong>Model:</strong> Four
+					<p><strong>S/N:</strong> H605744
 					<p>Text will go here.
 					<p>More text will go here.
 					<center>
