--- a/typewriters/template.html
+++ b/typewriters/template.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/front.jpg" alt="1918 Corona 3 Front" style="width:500px;"></center></p>
+					<p><center><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/front.jpg" alt="19XX Make Model Front" style="width:500px;"></center></p>
 					<hr>
 					<p><strong>Year:</strong> 19XX
 					<p><strong>Make:</strong> Make
