--- a/typewriterCollection.html
+++ b/typewriterCollection.html
@@ -132,7 +132,8 @@
 							<strong>1969 Olivetti-Underwood Studio 45 </strong><a href="http://www.dersche.id/typewriters/1969OlivettiUnderwoodStudio45.html"><font size="1">more...</font></a>
 						</li>
 						<li>
-							<strong>197X AN-UGC74A(V)3 Military Teletypewriter </strong><a href="http://www.dersche.id/typewriters/teletype.html"><font size="1">more...</font></a>
+							<strong>1974(?) AN-UGC74A(V)3 Military Teletypewriter </strong><a href="http://www.dersche.id/typewriters/teletype.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/teletype/front.jpg" alt="1936 Corona Standard" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong></strong>
