add 25 and 26 remington portables

--- a/typewriterCollection.html
+++ b/typewriterCollection.html
@@ -49,7 +49,7 @@
 						</li>
 						<li>
 							<strong>1925 Remington Portable </strong><a href="http://www.dersche.id/typewriters/1925RemingtonPortable.html"><font size="1">more...</font></a>
-							<p><img src="http://www.dersche.id/assets/img/typewriters/1925_RemingtonPortableOpen.jpg" alt="1925 Remington Portable" style="height:150px;"></p>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1925RemingtonPortable/ltilt.jpg" alt="1925 Remington Portable" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1926 Corona Four </strong><a href="http://www.dersche.id/typewriters/1926CoronaFour.html"><font size="1">more...</font></a>
@@ -57,7 +57,7 @@
 						</li>
 						<li>
 							<strong>1926 Remington Portable </strong><a href="http://www.dersche.id/typewriters/1926RemingtonPortable.html"><font size="1">more...</font></a>
-							<p><img src="http://www.dersche.id/assets/img/typewriters/1926_RemingtonPortableOpen.jpg" alt="1926 Remington Portable" style="height:150px;"></p>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/ltilt.jpg" alt="1926 Remington Portable" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1927 Bing 2 </strong><a href="http://www.dersche.id/typewriters/1927Bing2.html"><font size="1">more...</font></a>
@@ -96,6 +96,7 @@
 						</li>
 						<li>
 							<strong>1949 Smith Corona Sterling </strong><a href="http://www.dersche.id/typewriters/1939SmithCoronaSterling.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1949CoronaSterling/ltilt.jpg" alt="1949 Remington All New" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1949 Remington All New </strong><a href="http://www.dersche.id/typewriters/1949RemingtonAllNew.html"><font size="1">more...</font></a>
@@ -130,6 +131,7 @@
 						</li>
 						<li>
 							<strong>1969 Olivetti-Underwood Studio 45 </strong><a href="http://www.dersche.id/typewriters/1969OlivettiUnderwoodStudio45.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1969OlivettiStudio45/ltilt.jpg" alt="1969 Olivetti-Underwood Studio 45" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1974(?) AN-UGC74A(V)3 Military Teletypewriter </strong><a href="http://www.dersche.id/typewriters/teletype.html"><font size="1">more...</font></a>
