--- a/typewriters/1926RemingtonPortable.html
+++ b/typewriters/1926RemingtonPortable.html
@@ -24,7 +24,7 @@
 	</script>
     <section class="headline-sec">
         <div class="overlay ">
-            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1969 Olivetti-Underwood Studio 45</h3>
+            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1926 Remington Portable</h3>
         </div>
     </section>
     <!--HOME SECTION END-->
@@ -32,20 +32,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1969OlivettiStudio45/front.jpg" alt="1969 Olivetti-Underwood Studio 45 Front" style="width:500px;"></center></p>
+					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/front.jpg" alt="1926 Remington Portable Front" style="width:500px;"></center></p>
 					<hr>
-					<p><strong>Year:</strong> 1969
-					<p><strong>Make:</strong> Olivetti-Underwood
-					<p><strong>Model:</strong> Studio 45
-					<p><strong>S/N:</strong> 1346563
+					<p><strong>Year:</strong> 1926
+					<p><strong>Make:</strong> Remington
+					<p><strong>Model:</strong> Portable
+					<p><strong>S/N:</strong> ND69699
 					<p>Text will go here.
 					<p>More text will go here.
 					<center>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1969OlivettiStudio45/rtilt.jpg" alt="1969 Olivetti-Underwood Studio 45 Right Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1969OlivettiStudio45/ltilt.jpg" alt="1969 Olivetti-Underwood Studio 45 Left Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1969OlivettiStudio45/right.jpg" alt="1969 Olivetti-Underwood Studio 45 Right" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1969OlivettiStudio45/left.jpg" alt="1969 Olivetti-Underwood Studio 45 Left" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1969OlivettiStudio45/back.jpg" alt="1969 Olivetti-Underwood Studio 45 Back" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/rtilt.jpg" alt="1926 Remington Portable Right Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/ltilt.jpg" alt="1926 Remington Portable Left Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/right.jpg" alt="1926 Remington Portable Right" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/left.jpg" alt="1926 Remington Portable Left" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/back.jpg" alt="1926 Remington Portable Back" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/closed.jpg" alt="1926 Remington Portable Closed" style="width:500px;"></p>
 					</center>
                 </div>
             </div>
