--- a/typewriterLanding.html
+++ b/typewriterLanding.html
@@ -28,6 +28,7 @@
                 <div class="col-md-12">
 					<br>
 					<br>
+					<p><center><img src="http://www.dersche.id/assets/img/typewriters/CoronaStandardDrawing.jpg" alt="1936 Corona Standard Drawing" style="width:500px;"></p>
 					<hr>
                     <p>
 						Mac has been collecting typewriters since June of 2012. His collection currently includes somewhere around 40 to 50 different machines (he has lost count).
